--- a/frontend/src/components/SelectItemArea.css
+++ b/frontend/src/components/SelectItemArea.css
@@ -6,7 +6,7 @@
   display: block;
   position: absolute;
   background-color: #f6f6f6;
-  min-width: 230px;
+  /* min-width: 230px; */
   overflow: auto;
   border: 1px solid #ddd;
   z-index: 1;
@@ -20,14 +20,16 @@
 .dropdown li:hover {
   background-color: #ddd;
 }
-#myInput {
-  box-sizing: border-box;
+.dropdown-input {
+  /* box-sizing: border-box; */
   /* background-image: url('searchicon.png'); */
-  background-position: 14px 12px;
-  background-repeat: no-repeat;
-  font-size: 16px;
-  padding: 14px 20px 12px 45px;
-  border: none;
-  border-bottom: 1px solid #ddd;
+  /* background-position: 14px 12px; */
+  /* background-repeat: no-repeat; */
+  /* font-size: 14px; */
+  /* padding: 14px 20px 12px 45px; */
+  /* border: none; */
+  /* border-bottom: 1px solid #ddd; */
 }
-#myInput:focus {outline: 3px solid #ddd;}
+.dropdown-input:focus {
+  /* outline: 3px solid #ddd; */
+}
