--- a/frontend/src/design/styles.css
+++ b/frontend/src/design/styles.css
@@ -71,7 +71,7 @@ button.btn-delete:hover {
     /* min-width: 230px; */
     overflow: auto;
     border: 1px solid #ddd;
-    z-index: 1;
+    /* z-index: 1; */
 }
 .dropdown-content ul {
     list-style-type: none;
@@ -106,8 +106,53 @@ button.btn-delete:hover {
 
 
 /************ Modal ************/
-.modal-div {
+div.modal-btn button {
     display: inline;
+}
+div.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 0px !important;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+div.modal-content {
+    background-color: var(--primary-color);
+    margin: auto;
+    padding: 20px;
+    border: none;
+    border-radius: 5px;
+    width: 60%;
+    max-height: 80%;
+    overflow-y: auto;
+}
+div.modal-content {
+    display: flex !important;
+    flex-direction: column !important;
+    flex-wrap: wrap !important;
+}
+div.modal ul {
+    list-style-type: none;
+}
+div.modal li {
+    text-decoration: none;
+}
+div.modal input {
+    padding: 8px;
+}
+div.modal-header {
+    display: flex;
+    flex-direction: row !important;
+    justify-content: center !important;
+    width: 90%;
+}
+div.modal-header button {
+    margin-left: 500px;
 }
 /************ Modal ************/
 
