--- a/frontend/src/design/styles.css
+++ b/frontend/src/design/styles.css
@@ -149,17 +149,35 @@ div.modal-list ul {
     padding: 0px;
     overflow-x: hidden;
     overflow-y: auto;
-    /* border: 1px solid red; */
     height: 300px;
     max-height: 300px;
+    width: 500px;
+    border: 1px solid var(--secondary-color);
 }
 div.modal-list li {
     text-decoration: none;
     margin: 0px;
     padding: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+div.modal-list li:hover {
+    background-color: var(--secondary-color-transparent);
+}
+div.modal-li-input {
+    min-width: 55%;
+    max-width: 55%;
+}
+div.modal-li-input input {
+    width: 100%;
 }
 div.modal input {
     padding: 8px;
+}
+.modal-li-active {
+    background-color: var(--secondary-color-transparent);
 }
 /************ Modal ************/
 
