--- a/frontend/src/design/styles.css
+++ b/frontend/src/design/styles.css
@@ -39,7 +39,7 @@ input, input:hover, input:focus {
     padding: 5px 10px;
     margin: 2px;
 }
-input[disabled] {
+input[disabled], button[disabled] {
     background-color: rgba(255, 255, 255, 0.3);
     color: white;
 }
@@ -178,6 +178,12 @@ div.modal input {
 }
 .modal-li-active {
     background-color: var(--secondary-color-transparent);
+}
+div.modal-footer button {
+    margin-left: auto;
+}
+div.modal-footer {
+    width: 100%;
 }
 /************ Modal ************/
 
