--- a/frontend/src/design/styles.css
+++ b/frontend/src/design/styles.css
@@ -59,35 +59,37 @@ button.btn-delete:hover {
 
 
 /************ Select Item Area ************/
-.dropdown-root {
-    position: absolute;
-}
-.dropdown {
+div.dropdown {
     position: relative;
-    display: inline-block;
 }
-.dropdown-content {
-    display: block;
+div.dropdown-search {
+    /* border: 1px solid red; */
+}
+div.dropdown-content {
     position: absolute;
-    background-color: #f6f6f6;
-    /* min-width: 230px; */
+    top: 30px;
     overflow: auto;
-    border: 1px solid #ddd;
-    /* z-index: 1; */
+    min-width: 80%;
+    z-index: 1;
+    border: 1px solid var(--secondary-color);
+    border-radius: 3px;
+    background-color: var(--primary-color-transparent);
 }
-.dropdown-content ul {
+div.dropdown-content ul {
     list-style-type: none;
+    padding: 0px;
+    margin: 0px;
 }
-.dropdown-content li {
-    color: black;
-    padding: 12px 16px;
+div.dropdown-content li {
+    color: white;
+    padding: 5px 15px;
     text-decoration: none;
-    display: block;
     cursor: pointer;
-    margin: 0%;
+    margin: 0px;
+    width: auto;
 }
-.dropdown > li:hover {
-    background-color: #ddd;
+div.dropdown-content li:hover {
+    background-color: var(--secondary-color);
 }
 .dropdown-input {
     /* box-sizing: border-box; */
