style(css): design of button that call modal

--- a/frontend/src/design/styles.css
+++ b/frontend/src/design/styles.css
@@ -31,13 +31,15 @@ button {
 button:hover {
     background-color: var(--secondary-color-transparent);
 }
+input {
+    border: none;
+    border-radius: 3px;
+    padding: 8px;
+    margin: 2px;
+}
 input, input:hover, input:focus {
     background-color: rgba(255, 255, 255, 0.6);
     color: var(--primary-color);
-    border: none;
-    border-radius: 3px;
-    padding: 5px 10px;
-    margin: 2px;
 }
 input[disabled], button[disabled] {
     background-color: rgba(255, 255, 255, 0.3);
@@ -62,12 +64,9 @@ button.btn-delete:hover {
 div.dropdown {
     position: relative;
 }
-div.dropdown-search {
-    /* border: 1px solid red; */
-}
 div.dropdown-content {
     position: absolute;
-    top: 30px;
+    top: 38px;
     overflow: auto;
     min-width: 80%;
     z-index: 1;
@@ -90,21 +89,6 @@ div.dropdown-content li {
 }
 div.dropdown-content li:hover {
     background-color: var(--secondary-color);
-}
-.dropdown-input {
-    /* box-sizing: border-box; */
-    /* background-image: url('searchicon.png'); */
-    /* background-position: 14px 12px; */
-    /* background-repeat: no-repeat; */
-    /* font-size: 14px; */
-    padding: 5px;
-    border: none;
-    border-radius: 3px;
-    /* border-bottom: 1px solid #ddd; */
-    width: auto;
-}
-.dropdown-input:focus {
-    /* outline: 3px solid #ddd; */
 }
 /************ Select Item Area ************/
 
@@ -175,9 +159,6 @@ div.modal-li-input {
 div.modal-li-input input {
     width: 100%;
 }
-div.modal input {
-    padding: 8px;
-}
 .modal-li-active {
     background-color: var(--secondary-color-transparent);
 }
@@ -195,7 +176,7 @@ div.transaction-item {
     border: 2px solid var(--secondary-color);
     border-radius: 5px;
 }
-div.transaction-item div {
+div.transaction-item > div {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -281,7 +262,6 @@ div.transaction-items-list li {
 }
 div.transaction-items-total-value {
     margin-right: 50px;
-    /* border: 1px solid red; */
 }
 div.transaction-items-total-value .value {
     font-weight: bold;
